feat: 属性增加前端组件数据结构用于渲染适配、增加字段组件类型注解定义前端组件、各插件参数字段加上相关组件类型注解